--- a/index.html
+++ b/index.html
@@ -24,173 +24,191 @@
   <body class="body">
     <!-- header -->
     <header class="page-header">
-      <nav class="page-navigation">
-        <a class="logo" href="./index.html"
-          >Web<span class="logo-item-header">Studio</span></a
-        >
-        <ul class="menu">
-          <li class="menu-item">
-            <a class="menu-link" href="./index.html">Studio</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link" href="">Portfolio</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="link-kontakt">
-        <ul class="kontakt-list">
-          <li>
-            <a class="contact-item" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="contact-item" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container page-header-kontainer">
+        <nav class="page-navigation">
+          <a class="logo" href="./index.html"
+            >Web<span class="logo-item-header">Studio</span></a
+          >
+          <ul class="menu">
+            <li class="menu-item">
+              <a class="menu-link" href="./index.html">Studio</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="">Portfolio</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+
+        <address class="link-kontakt">
+          <ul class="kontakt-list">
+            <li>
+              <a class="contact-item" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contact-item" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main class="main-content">
       <!-- 1 section -->
       <section class="section-title">
-        <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button class="main-button" type="button">Order Service</button>
+        <div class="container section-title-container">
+          <h1 class="main-title">Effective Solutions for Your Business</h1>
+          <button class="main-button" type="button">Order Service</button>
+        </div>
       </section>
+
       <!-- 2 section -->
       <section class="main-section">
-        <h2>Activities</h2>
-        <ul>
-          <li>
-            <h3 class="main-section-title">Strategy</h3>
-            <p class="main-section-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
+        <div class="container">
+          <h2>Activities</h2>
+          <ul>
+            <li>
+              <h3 class="main-section-title">Strategy</h3>
+              <p class="main-section-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
 
-          <li>
-            <h3 class="main-section-title">Punctuality</h3>
-            <p class="main-section-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="main-section-title">Diligence</h3>
-            <p class="main-section-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="main-section-title">Technologies</h3>
-            <p class="main-section-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+            <li>
+              <h3 class="main-section-title">Punctuality</h3>
+              <p class="main-section-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="main-section-title">Diligence</h3>
+              <p class="main-section-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="main-section-title">Technologies</h3>
+              <p class="main-section-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- 3 section -->
       <section class="section-team">
-        <h2 class="title-team">Our Team</h2>
-        <ul class="section-team">
-          <li class="section-team-tittle">
-            <img
-              src="./images/man-bearded.jpg"
-              alt="man-bearded"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Mark Guerrero</h3>
-            <p class="team-profession">Product Designer</p>
-          </li>
+        <div class="container">
+          <h2 class="title-team">Our Team</h2>
+          <ul class="section-team">
+            <li class="section-team-tittle">
+              <img
+                src="./images/man-bearded.jpg"
+                alt="man-bearded"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Mark Guerrero</h3>
+              <p class="team-profession">Product Designer</p>
+            </li>
 
-          <li class="section-team-tittle">
-            <img
-              src="./images/man-blond.jpg"
-              alt="man-blond"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Tom Ford</h3>
-            <p class="team-profession">Frontend Developer</p>
-          </li>
+            <li class="section-team-tittle">
+              <img
+                src="./images/man-blond.jpg"
+                alt="man-blond"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Tom Ford</h3>
+              <p class="team-profession">Frontend Developer</p>
+            </li>
 
-          <li class="section-team-tittle">
-            <img
-              src="./images/women.jpg"
-              alt="women"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Camila Garcia</h3>
-            <p class="team-profession">Marketing</p>
-          </li>
-          <li class="section-team-tittle">
-            <img
-              src="./images/man-curly.jpg"
-              alt="man-curly"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Daniel Wilson</h3>
-            <p class="team-profession">UI Designer</p>
-          </li>
-        </ul>
+            <li class="section-team-tittle">
+              <img
+                src="./images/women.jpg"
+                alt="women"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Camila Garcia</h3>
+              <p class="team-profession">Marketing</p>
+            </li>
+            <li class="section-team-tittle">
+              <img
+                src="./images/man-curly.jpg"
+                alt="man-curly"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Daniel Wilson</h3>
+              <p class="team-profession">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- 4 section -->
       <section class="section-portfolio">
-        <h2 class="portfolio">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img src="./images/application.jpg" alt="application" width="360" />
-            <h3 class="portfolio-title">Banking App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
+        <div class="container">
+          <h2 class="portfolio">Our Portfolio</h2>
+          <ul>
+            <li>
+              <img
+                src="./images/application.jpg"
+                alt="application"
+                width="360"
+              />
+              <h3 class="portfolio-title">Banking App</h3>
+              <p class="portfolio-text">App</p>
+            </li>
 
-          <li>
-            <img src="./images/phone-pay.jpg" alt="phone-pay" width="360" />
-            <h3 class="portfolio-title">Cashless Payment</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/laptop.jpg" alt="laptop" width="360" />
-            <h3 class="portfolio-title">Meditation App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li>
-            <img src="./images/auto.jpg" alt="auto" width="360" />
-            <h3 class="portfolio-title">Taxi Service</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/screen.jpg" alt="screen" width="360" />
-            <h3 class="portfolio-title">Screen Illustrations</h3>
-            <p class="portfolio-text">Design</p>
-          </li>
-          <li>
-            <img src="./images/phone.jpg" alt="phone" width="360" />
-            <h3 class="portfolio-title">Online Courses</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-        </ul>
+            <li>
+              <img src="./images/phone-pay.jpg" alt="phone-pay" width="360" />
+              <h3 class="portfolio-title">Cashless Payment</h3>
+              <p class="portfolio-text">Marketing</p>
+            </li>
+            <li>
+              <img src="./images/laptop.jpg" alt="laptop" width="360" />
+              <h3 class="portfolio-title">Meditation App</h3>
+              <p class="portfolio-text">App</p>
+            </li>
+            <li>
+              <img src="./images/auto.jpg" alt="auto" width="360" />
+              <h3 class="portfolio-title">Taxi Service</h3>
+              <p class="portfolio-text">Marketing</p>
+            </li>
+            <li>
+              <img src="./images/screen.jpg" alt="screen" width="360" />
+              <h3 class="portfolio-title">Screen Illustrations</h3>
+              <p class="portfolio-text">Design</p>
+            </li>
+            <li>
+              <img src="./images/phone.jpg" alt="phone" width="360" />
+              <h3 class="portfolio-title">Online Courses</h3>
+              <p class="portfolio-text">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- footer -->
     <footer class="footer-web">
-      <a class="logo" href="./index.html"
-        >Web<span class="logo-footer">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-footer">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
