--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body class="body">
     <!-- header -->
     <header class="page-header">
-      <div class="container page-header-kontainer">
+      <div class="container">
         <nav class="page-navigation">
           <a class="logo" href="./index.html"
             >Web<span class="logo-item-header">Studio</span></a
@@ -61,7 +61,7 @@
     <main class="main-content">
       <!-- 1 section -->
       <section class="section-title">
-        <div class="container section-title-container">
+        <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button class="main-button" type="button">Order Service</button>
         </div>
