--- a/index.html
+++ b/index.html
@@ -61,18 +61,20 @@
     <main class="main-content">
       <!-- 1 section -->
       <section class="section-title">
-        <div class="container">
-          <h1 class="main-title">Effective Solutions for Your Business</h1>
+        <div class="container section-title-container">
+          <h1 class="main-title .visually-hidden">
+            Effective Solutions for Your Business
+          </h1>
           <button class="main-button" type="button">Order Service</button>
         </div>
       </section>
 
       <!-- 2 section -->
       <section class="main-section">
-        <div class="container">
+        <div class="container main-section-container">
           <h2>Activities</h2>
-          <ul>
-            <li>
+          <ul class="sec-cont">
+            <li class="main-list-cont">
               <h3 class="main-section-title">Strategy</h3>
               <p class="main-section-text">
                 Our goal is to identify the business problem to walk away with
