--- a/index.html
+++ b/index.html
@@ -62,9 +62,7 @@
       <!-- 1 section -->
       <section class="section-title">
         <div class="container section-title-container">
-          <h1 class="main-title .visually-hidden">
-            Effective Solutions for Your Business
-          </h1>
+          <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button class="main-button" type="button">Order Service</button>
         </div>
       </section>
