--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <main class="main-content">
       <!-- 1 section -->
       <section class="section-title">
-        <div class="container section-title-container">
+        <div class="container-title section-title-container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button class="main-button" type="button">Order Service</button>
         </div>
