--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <main class="main-content">
       <!-- 1 section -->
       <section class="section-title">
-        <div class="container-title section-title-container">
+        <div class="container section-title-container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button class="main-button" type="button">Order Service</button>
         </div>
@@ -80,21 +80,21 @@
               </p>
             </li>
 
-            <li>
+            <li class="main-list-cont">
               <h3 class="main-section-title">Punctuality</h3>
               <p class="main-section-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="main-list-cont">
               <h3 class="main-section-title">Diligence</h3>
               <p class="main-section-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="main-list-cont">
               <h3 class="main-section-title">Technologies</h3>
               <p class="main-section-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -106,7 +106,7 @@
       </section>
       <!-- 3 section -->
       <section class="section-team">
-        <div class="container">
+        <div class="container section-team-container">
           <h2 class="title-team">Our Team</h2>
           <ul class="section-team">
             <li class="section-team-tittle">
@@ -116,8 +116,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Mark Guerrero</h3>
-              <p class="team-profession">Product Designer</p>
+              <div class="name_profession">
+                <h3 class="team-name">Mark Guerrero</h3>
+                <p class="team-profession">Product Designer</p>
+              </div>
             </li>
 
             <li class="section-team-tittle">
@@ -127,8 +129,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Tom Ford</h3>
-              <p class="team-profession">Frontend Developer</p>
+              <div class="name_profession">
+                <h3 class="team-name">Tom Ford</h3>
+                <p class="team-profession">Frontend Developer</p>
+              </div>
             </li>
 
             <li class="section-team-tittle">
@@ -138,8 +142,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Camila Garcia</h3>
-              <p class="team-profession">Marketing</p>
+              <div class="name_profession">
+                <h3 class="team-name">Camila Garcia</h3>
+                <p class="team-profession">Marketing</p>
+              </div>
             </li>
             <li class="section-team-tittle">
               <img
@@ -148,8 +154,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Daniel Wilson</h3>
-              <p class="team-profession">UI Designer</p>
+              <div class="name_profession">
+                <h3 class="team-name">Daniel Wilson</h3>
+                <p class="team-profession">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
