--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <section class="section-portfolio">
         <div class="container">
           <h2 class="portfolio">Our Portfolio</h2>
-          <ul>
+          <ul class="portfolio-list">
             <li>
               <img
                 src="./images/application.jpg"
@@ -177,30 +177,41 @@
               <p class="portfolio-text">App</p>
             </li>
 
-            <li>
+            <li class="portfolio-img">
               <img src="./images/phone-pay.jpg" alt="phone-pay" width="360" />
-              <h3 class="portfolio-title">Cashless Payment</h3>
-              <p class="portfolio-text">Marketing</p>
+              <div class="portfolio-inf">
+                <h3 class="portfolio-title">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-img">
               <img src="./images/laptop.jpg" alt="laptop" width="360" />
-              <h3 class="portfolio-title">Meditation App</h3>
-              <p class="portfolio-text">App</p>
+              <div class="portfolio-inf">
+                <h3 class="portfolio-title">Meditation App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-img">
               <img src="./images/auto.jpg" alt="auto" width="360" />
-              <h3 class="portfolio-title">Taxi Service</h3>
-              <p class="portfolio-text">Marketing</p>
+
+              <div class="portfolio-inf">
+                <h3 class="portfolio-title">Taxi Service</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-img">
               <img src="./images/screen.jpg" alt="screen" width="360" />
-              <h3 class="portfolio-title">Screen Illustrations</h3>
-              <p class="portfolio-text">Design</p>
+              <div class="portfolio-inf">
+                <h3 class="portfolio-title">Screen Illustrations</h3>
+                <p class="portfolio-text">Design</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-img">
               <img src="./images/phone.jpg" alt="phone" width="360" />
-              <h3 class="portfolio-title">Online Courses</h3>
-              <p class="portfolio-text">Marketing</p>
+              <div class="portfolio-inf">
+                <h3 class="portfolio-title">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
