--- a/index.html
+++ b/index.html
@@ -167,31 +167,35 @@
         <div class="container">
           <h2 class="portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
-            <li>
+            <li class="portfolio-cont">
               <img
                 src="./images/application.jpg"
                 alt="application"
                 width="360"
               />
-              <h3 class="portfolio-title">Banking App</h3>
-              <p class="portfolio-text">App</p>
+              <div class="portfolio-inf">
+                <h3 class="portfolio-title">Banking App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
             </li>
 
-            <li class="portfolio-img">
+            <li class="portfolio-cont">
               <img src="./images/phone-pay.jpg" alt="phone-pay" width="360" />
               <div class="portfolio-inf">
                 <h3 class="portfolio-title">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
-            <li class="portfolio-img">
+
+            <li class="portfolio-cont">
               <img src="./images/laptop.jpg" alt="laptop" width="360" />
               <div class="portfolio-inf">
                 <h3 class="portfolio-title">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
-            <li class="portfolio-img">
+
+            <li class="portfolio-cont">
               <img src="./images/auto.jpg" alt="auto" width="360" />
 
               <div class="portfolio-inf">
@@ -199,14 +203,16 @@
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
-            <li class="portfolio-img">
+
+            <li class="portfolio-cont">
               <img src="./images/screen.jpg" alt="screen" width="360" />
               <div class="portfolio-inf">
                 <h3 class="portfolio-title">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
-            <li class="portfolio-img">
+
+            <li class="portfolio-cont">
               <img src="./images/phone.jpg" alt="phone" width="360" />
               <div class="portfolio-inf">
                 <h3 class="portfolio-title">Online Courses</h3>
