--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body class="body">
     <!-- header -->
     <header class="page-header">
-      <div class="container">
+      <div class="container page-header-container">
         <nav class="page-navigation">
           <a class="logo" href="./index.html"
             >Web<span class="logo-item-header">Studio</span></a
