--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <!-- 2 section -->
       <section class="main-section">
         <div class="container main-section-container">
-          <h2>Activities</h2>
+          <h2 class="visually-hidden">Activities</h2>
           <ul class="sec-cont">
             <li class="main-list-cont">
               <h3 class="main-section-title">Strategy</h3>
