--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
       </section>
       <!-- 3 section -->
-      <section class="section-team">
+      <section class="team">
         <div class="container section-team-container">
           <h2 class="title-team">Our Team</h2>
           <ul class="section-team">
