--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     </main>
     <!-- footer -->
     <footer class="footer-web">
-      <div class="container">
+      <div class="container footer-web-container">
         <a class="logo" href="./index.html"
           >Web<span class="logo-footer">Studio</span></a
         >
