--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       </section>
       <!-- 4 section -->
       <section class="section-portfolio">
-        <div class="container">
+        <div class="container section-portfolio-container">
           <h2 class="portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-cont">
