--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <div class="container section-portfolio-container">
           <h2 class="portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
-            <li class="portfolio-cont">
+            <li class="portfolio-element">
               <img
                 src="./images/application.jpg"
                 alt="application"
