--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
               </div>
             </li>
 
-            <li class="portfolio-cont">
+            <li class="portfolio-element">
               <img src="./images/phone-pay.jpg" alt="phone-pay" width="360" />
               <div class="portfolio-inf">
                 <h3 class="portfolio-title">Cashless Payment</h3>
@@ -187,7 +187,7 @@
               </div>
             </li>
 
-            <li class="portfolio-cont">
+            <li class="portfolio-element">
               <img src="./images/laptop.jpg" alt="laptop" width="360" />
               <div class="portfolio-inf">
                 <h3 class="portfolio-title">Meditation App</h3>
@@ -195,7 +195,7 @@
               </div>
             </li>
 
-            <li class="portfolio-cont">
+            <li class="portfolio-element">
               <img src="./images/auto.jpg" alt="auto" width="360" />
 
               <div class="portfolio-inf">
@@ -204,7 +204,7 @@
               </div>
             </li>
 
-            <li class="portfolio-cont">
+            <li class="portfolio-element">
               <img src="./images/screen.jpg" alt="screen" width="360" />
               <div class="portfolio-inf">
                 <h3 class="portfolio-title">Screen Illustrations</h3>
@@ -212,7 +212,7 @@
               </div>
             </li>
 
-            <li class="portfolio-cont">
+            <li class="portfolio-element">
               <img src="./images/phone.jpg" alt="phone" width="360" />
               <div class="portfolio-inf">
                 <h3 class="portfolio-title">Online Courses</h3>
