--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
                 src="./images/application.jpg"
                 alt="application"
                 width="360"
+                height="300"
               />
               <div class="portfolio-inf">
                 <h3 class="portfolio-title">Banking App</h3>
@@ -180,7 +181,12 @@
             </li>
 
             <li class="portfolio-element">
-              <img src="./images/phone-pay.jpg" alt="phone-pay" width="360" />
+              <img
+                src="./images/phone-pay.jpg"
+                alt="phone-pay"
+                width="360"
+                height="300"
+              />
               <div class="portfolio-inf">
                 <h3 class="portfolio-title">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
@@ -188,7 +194,12 @@
             </li>
 
             <li class="portfolio-element">
-              <img src="./images/laptop.jpg" alt="laptop" width="360" />
+              <img
+                src="./images/laptop.jpg"
+                alt="laptop"
+                width="360"
+                height="300"
+              />
               <div class="portfolio-inf">
                 <h3 class="portfolio-title">Meditation App</h3>
                 <p class="portfolio-text">App</p>
@@ -196,7 +207,12 @@
             </li>
 
             <li class="portfolio-element">
-              <img src="./images/auto.jpg" alt="auto" width="360" />
+              <img
+                src="./images/auto.jpg"
+                alt="auto"
+                width="360"
+                height="300"
+              />
 
               <div class="portfolio-inf">
                 <h3 class="portfolio-title">Taxi Service</h3>
@@ -205,7 +221,12 @@
             </li>
 
             <li class="portfolio-element">
-              <img src="./images/screen.jpg" alt="screen" width="360" />
+              <img
+                src="./images/screen.jpg"
+                alt="screen"
+                width="360"
+                height="300"
+              />
               <div class="portfolio-inf">
                 <h3 class="portfolio-title">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
@@ -213,7 +234,12 @@
             </li>
 
             <li class="portfolio-element">
-              <img src="./images/phone.jpg" alt="phone" width="360" />
+              <img
+                src="./images/phone.jpg"
+                alt="phone"
+                width="360"
+                height="300"
+              />
               <div class="portfolio-inf">
                 <h3 class="portfolio-title">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
