--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+u<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -31,7 +31,7 @@
           >
           <ul class="menu">
             <li class="menu-item">
-              <a class="menu-link" href="./index.html">Studio</a>
+              <a class="menu-link current" href="./index.html">Studio</a>
             </li>
             <li class="menu-item">
               <a class="menu-link" href="">Portfolio</a>
@@ -73,6 +73,10 @@
           <h2 class="visually-hidden">Activities</h2>
           <ul class="sec-cont">
             <li class="main-list-cont">
+              <svg class="main-icons" widht="264" height="112">
+                <use href="./images/icons2/symbol-defs.svg#icon-Icon-1"></use>
+              </svg>
+
               <h3 class="main-section-title">Strategy</h3>
               <p class="main-section-text">
                 Our goal is to identify the business problem to walk away with
@@ -81,6 +85,9 @@
             </li>
 
             <li class="main-list-cont">
+              <svg class="main-icons" widht="264" height="112">
+                <use href="./images/icons2/symbol-defs.svg#icon-Icon-2"></use>
+              </svg>
               <h3 class="main-section-title">Punctuality</h3>
               <p class="main-section-text">
                 Bring the key message to the brand's audience for the best price
@@ -88,6 +95,9 @@
               </p>
             </li>
             <li class="main-list-cont">
+              <svg class="main-icons" widht="264" height="112">
+                <use href="./images/icons2/symbol-defs.svg#icon-Icon-3"></use>
+              </svg>
               <h3 class="main-section-title">Diligence</h3>
               <p class="main-section-text">
                 Research and confirm brands that present the strongest digital
@@ -95,6 +105,9 @@
               </p>
             </li>
             <li class="main-list-cont">
+              <svg class="main-icons" widht="264" height="112">
+                <use href="./images/icons2/symbol-defs.svg#icon-Icon-4"></use>
+              </svg>
               <h3 class="main-section-title">Technologies</h3>
               <p class="main-section-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -120,6 +133,21 @@
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="team-profession">Product Designer</p>
               </div>
+
+              <svg class="social-list-item" width="16" height="16">
+                <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
+              </svg>
+              <svg class="social-list-item" width="16" height="16">
+                <use href="../images/icons/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+              <svg class="social-list-item" width="16" height="16">
+                <use href="../images/icons/symbol-defs.svg#icon-facebook"></use>
+              </svg>
+              <svg class="social-list-item" width="16" height="16">
+                <use
+                  href="../images/icons/symbol-defs.svg#icon-linkedin2"
+                ></use>
+              </svg>
             </li>
 
             <li class="section-team-tittle">
@@ -133,6 +161,20 @@
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-profession">Frontend Developer</p>
               </div>
+              <svg class="social-list-item" width="16" height="16">
+                <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
+              </svg>
+              <svg class="social-list-item" width="16" height="16">
+                <use href="../images/icons/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+              <svg class="social-list-item" width="16" height="16">
+                <use href="../images/icons/symbol-defs.svg#icon-facebook"></use>
+              </svg>
+              <svg class="social-list-item" width="16" height="16">
+                <use
+                  href="../images/icons/symbol-defs.svg#icon-linkedin2"
+                ></use>
+              </svg>
             </li>
 
             <li class="section-team-tittle">
@@ -146,6 +188,20 @@
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="team-profession">Marketing</p>
               </div>
+              <svg class="social-list-item" width="16" height="16">
+                <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
+              </svg>
+              <svg class="social-list-item" width="16" height="16">
+                <use href="../images/icons/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+              <svg class="social-list-item" width="16" height="16">
+                <use href="../images/icons/symbol-defs.svg#icon-facebook"></use>
+              </svg>
+              <svg class="social-list-item" width="16" height="16">
+                <use
+                  href="../images/icons/symbol-defs.svg#icon-linkedin2"
+                ></use>
+              </svg>
             </li>
             <li class="section-team-tittle">
               <img
@@ -158,6 +214,20 @@
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="team-profession">UI Designer</p>
               </div>
+              <svg class="social-list-item" width="16" height="16">
+                <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
+              </svg>
+              <svg class="social-list-item" width="16" height="16">
+                <use href="../images/icons/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+              <svg class="social-list-item" width="16" height="16">
+                <use href="../images/icons/symbol-defs.svg#icon-facebook"></use>
+              </svg>
+              <svg class="social-list-item" width="16" height="16">
+                <use
+                  href="../images/icons/symbol-defs.svg#icon-linkedin2"
+                ></use>
+              </svg>
             </li>
           </ul>
         </div>
@@ -174,6 +244,16 @@
                 width="360"
                 height="300"
               />
+              <div class="box">
+                <div class="overlay">
+                  <img src="./images/blue.jpg" alt="cart" />
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-inf">
                 <h3 class="portfolio-title">Banking App</h3>
                 <p class="portfolio-text">App</p>
@@ -259,6 +339,21 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+      </div>
+      <div class="footer-icon">
+        <p class="footer-icon-text">Social media</p>
+        <svg class="social-list-item" width="16" height="16">
+          <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
+        </svg>
+        <svg class="social-list-item" width="16" height="16">
+          <use href="../images/icons/symbol-defs.svg#icon-twitter"></use>
+        </svg>
+        <svg class="social-list-item" width="16" height="16">
+          <use href="../images/icons/symbol-defs.svg#icon-facebook"></use>
+        </svg>
+        <svg class="social-list-item" width="16" height="16">
+          <use href="../images/icons/symbol-defs.svg#icon-linkedin2"></use>
+        </svg>
       </div>
     </footer>
   </body>
